# cosmic-text

./: Cargo.toml  README.md
examples/editor-libcosmic/src/: main.rs  text.rs  text_box.rs
examples/editor-orbclient/src/: main.rs
examples/editor-test/src/: main.rs
examples/rich-text/: Cargo.toml
examples/rich-text/src/: main.rs
examples/terminal/src/: main.rs
src/: attrs.rs  buffer.rs  buffer_line.rs  cache.rs  layout.rs  lib.rs  shape.rs  swash.rs
src/edit/: editor.rs  mod.rs  syntect.rs
src/font/: mod.rs
src/font/fallback/: macos.rs  mod.rs
src/font/system/: std.rs
