[package]
name = "floem-cosmic-text"
description = "Unofficial cosmic-text fork for Floem"
version = "0.7.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cosmic-text/latest/cosmic_text/"
repository = "https://github.com/pop-os/cosmic-text"

[dependencies]
fontdb = { version = "0.16.0", default-features = false }
libm = "0.2.6"
log = "0.4.17"
ouroboros = { version = "0.15.5", default-features = false }
rustybuzz = { version = "0.8.0", default-features = false, features = ["libm"] }
swash = { version = "0.1.8", optional = true }
syntect = { version = "5.0.0", optional = true }
sys-locale = { version = "0.2.3", optional = true }
unicode-linebreak = "0.1.4"
unicode-script = "0.5.5"
unicode-segmentation = "1.10.0"
rangemap = "1.2.0"
parking_lot = "0.12.1"
once_cell = "1.17.1"
ttf-parser = "0.18.1"
stretto = "0.8.1"
floem-peniko = "0.1.0"

[dependencies.unicode-bidi]
version = "0.3.8"
default-features = false
features = ["hardcoded-data"]

[features]
default = ["std", "swash"]
no_std = [
  "rustybuzz/libm",
]
std = [
  "fontdb/memmap",
  "fontdb/std",
  "fontdb/fontconfig",
  "ouroboros/std",
  "rustybuzz/std",
  "sys-locale",
  "unicode-bidi/std",
]
vi = ["syntect"]

[workspace]
members = [
  "examples/*",
]
